Finished html layout and added functionality to page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,61 @@
+<!doctype html>
+<html lang="en">
 
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <title>Hello, world!</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
+
+<body>
+    <div class="questionsContainer">
+        <h1>Trivia Game!</h1>
+        <br>
+        <p>
+            Answer whether these facts are <strong>True or False</strong> before the timer runs out!!
+        </p>
+        <br>
+        <p id="countDown">
+            Timer: 00:30
+        </p>
+        <br>
+        <br>
+        <hr>
+        <p>
+            <strong>1.) The dot over the "i" and the "j" is called the Tittle!</strong>
+            <br>
+            <input type="checkbox" name="answer" class="check"> True<br>
+            <input type="checkbox" name="answer" class="check"> False<br>
+        </p>
+        <hr>
+        <p>
+            <strong>2.) When a burning cigarette is inhaled, the temperature of the tip is 500 degrees celsius!</strong>
+            <br>
+            <input type="checkbox" name="answer" class="check"> True<br>
+            <input type="checkbox" name="answer" class="check"> False<br>
+        </p>
+        </p>
+        <hr>
+        <p>
+            <strong>3.) Men buy an average of 3.4 pairs of underwear a year!</strong>
+            <br>
+            <input type="checkbox" name="answer" class="check"> True<br>
+            <input type="checkbox" name="answer" class="check"> False<br>
+        </p>
+        </p>
+        <br>
+        <button type="button">Submit</button>
+
+    </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+        <script src="../TriviaGame/assets/javascript/app.js"></script>
+</body>
+
+</html>
