Created countdown timer

--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
             Answer whether these facts are <strong>True or False</strong> before the timer runs out!!
         </p>
         <br>
-        <p id="countDown">
-            Timer: 00:30
-        </p>
+        <p id="countDown"></p>
         <br>
         <br>
         <hr>
